--- a/style.css
+++ b/style.css
@@ -146,6 +146,6 @@ footer {
     justify-content: space-around;
     background-color: black;
     color: white;
-
+    width: 100vw;
     font-size: 20px;
 }
