--- a/style.css
+++ b/style.css
@@ -26,9 +26,7 @@ header {
     text-decoration: none;
     font-weight: 700;
     font-size: 20px;
-
     margin-right: 25px;
-
     transition: color 0.3s linear;
 }
 
@@ -41,7 +39,6 @@ header {
     text-decoration: none;
     font-weight: 700;
     font-size: 20px;
-
     margin-right: 25px;
 }
 
@@ -50,7 +47,6 @@ header {
     text-decoration: none;
     font-weight: 700;
     padding-left: 5px;
-
     transition: color 0.3s linear;
 }
 
@@ -68,7 +64,6 @@ main {
     font-size: 20px;
     color: black;
 }
-
 
 h1 {
     font-weight: 700;
@@ -116,7 +111,7 @@ th, td {
     padding: 10px;
     text-align: center;
     font-size: 20px;
-  }
+}
 
 .popular {
     padding-bottom: 50px;
@@ -131,8 +126,7 @@ html {
 .num-footer {
     color: white;
     text-decoration: none;
-
-     transition: color 0.3s linear;
+    transition: color 0.3s linear;
 }
 
 .num-footer:hover {
@@ -148,4 +142,117 @@ footer {
     color: white;
     width: 100vw;
     font-size: 20px;
+}
+
+@media (max-width: 800px) {
+    .about-us img {
+        width: 500px;
+        height: auto;
+    }
+    
+
+    header .container {
+        justify-content: space-between;
+        padding: 0 20px;
+    }
+    
+    .nav-item:first-child {
+        margin-left: 0; 
+    }
+    
+    .nav-item:last-child {
+        margin-right: 0; 
+}
+
+
+@media (max-width: 600px) {
+    h1 {
+        text-align: center;
+        font-size: 80px;
+    }
+    
+    header .container {
+        flex-direction: column; 
+        align-items: center;
+        padding-top: 20px;
+    }
+    
+    .nav-item {
+        margin: 10px 0;
+        font-size: 24px; 
+    }
+    
+    .phone {
+        border-left: none;
+        border-top: 3px solid black;
+        padding-left: 0;
+        padding-top: 10px;
+        margin-top: 10px;
+    }
+    
+    .about-us img {
+        width: 100%;
+        height: auto;
+    }
+    
+    th, td {
+        font-size: 18px;
+    }
+    
+
+    .name {
+        flex-direction: column;
+        height: auto;
+        padding: 50px 20px;
+    }
+    
+    .container {
+        flex-direction: column;
+        padding: 20px;
+    }
+    
+    h2, .about {
+        margin-left: 20px;
+        text-align: center;
+    }
+    
+    table {
+        margin: 0 auto;
+        width: 90%;
+    }
+}
+
+
+@media (max-width: 400px) {
+    th, td {
+        font-size: 16px;
+        padding: 8px;
+    }
+    
+    h1 {
+        font-size: 60px;
+    }
+    
+    .nav-item {
+        font-size: 20px;
+    }
+    
+    .about {
+        font-size: 24px;
+        margin-left: 20px;
+    }
+    
+    footer {
+        flex-direction: column;
+        text-align: center;
+        padding: 20px;
+    }
+    
+    table {
+        font-size: 14px;
+    }
+    
+    th, td {
+        padding: 5px;
+    }
 }
