--- a/style.css
+++ b/style.css
@@ -173,16 +173,16 @@ footer {
 }
 
 @media (max-width: 600px) {
+
+    header {
+      height: auto;
+    }
+
     h1 {
         text-align: center;
         font-size: 80px;
     }
-    
-    header .container {
-        flex-direction: column; 
-        align-items: center;
-        padding-top: 20px;
-    }
+
     
     .nav {
         display: flex;
