--- a/lunch.css
+++ b/lunch.css
@@ -98,6 +98,25 @@
 
 
 @media (max-width: 600px) {
+    header {
+      height: auto;
+    }
+
+    body {
+      max-width: 100%;
+      overflow-x: hidden;
+    }
+
+    footer {
+      max-width: 100%;
+      display: flex; 
+      flex-wrap: wrap;
+      box-sizing: border-box; 
+    }
+
+    img {
+      max-width: 100%;
+    }
  
     h1 {
         text-align: center;
@@ -106,13 +125,14 @@
   
     nav {
         flex-direction: column; 
-        align-items: center; 
+        align-items: center;
     }
     
  
     nav a {
         font-size: calc(16px + 4px); 
         margin: 5px 0;
+        
     }
     
    
@@ -138,4 +158,5 @@
     .dish-price {
         font-size: 16px;
     }
+
 }
