--- a/style.css
+++ b/style.css
@@ -178,6 +178,11 @@ footer {
       height: auto;
     }
 
+    body {
+      max-width: 100%;
+      overflow-x: hidden;
+    }
+
     h1 {
         text-align: center;
         font-size: 80px;
